istio/gateway.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      credentialName: my-ingress-cert
      minProtocolVersion: TLSV1_2
      mode: SIMPLE  
    hosts:
    - "*"
