istio/argo-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: argocd
spec:
  hosts: 
  - 'argo.local.pratikargade.online'
  gateways:
  - istio-system/gateway
  http:
    - match:
        - uri:
            # Allow the Authentication Request Callback to get routed to productpage so it can be intercepted by the authservice
            prefix: /
      route:
      - destination:
          host: argocd-server
          port: 
            number: 80
